# simple-dynamical-systems

./: README.md
scripts/: plot_av.py  plot_dubins.py
sds_aeromis/: CMakeLists.txt  package.xml
sds_aeromis/example/: uav_perch_demo.cu
sds_aeromis/include/sds_aeromis/: aerial_vehicle.cuh
sds_aeromis/src/: aerial_vehicle.cu  binds.cu  uav_demo.cu
sds_core/: CMakeLists.txt  package.xml
sds_core/.cache/clangd/index/: dubin_cem.cu.CEE431AC6250B8F9.idx  dubin_cem.cu.D9504BF59CB980FA.idx  sds_control.cuh.C4071CAAACAE603B.idx  sds_core.cpp.AD191CDD488E0977.idx  sds_core.cu.72A2F79521FF8C3E.idx  sds_core.cuh.C5B831EE2C3F5423.idx  sds_tvlqr.cuh.0129A0AA6F21E03A.idx  tensor.cuh.E5D6DB1362072455.idx
sds_core/cmake/: sds_coreConfig.cmake.in
sds_core/example/: dubin_cem.cu
sds_core/include/: sds_control.cuh  sds_core.cuh  sds_mpc.cuh  sds_mpc.h  sds_tvlqr.cuh  tensor.cuh
sds_core/src/: sds_core.cu
