<?xml version="1.0"?>
<package format="3">
  <name>sds_core</name>
  <version>0.1.0</version>
  <description>
    Simple Dynamical Systems core C++ library.
  </description>

  <maintainer email="your.email@example.com">Your Name</maintainer>
  <license>MIT</license>

  <buildtool_depend>cmake</buildtool_depend>

  <export>
    <build_type>cmake</build_type>
  </export>
</package>
